Made several changes today

--- a/src/main/resources/templates/javacollections.html
+++ b/src/main/resources/templates/javacollections.html
@@ -69,7 +69,15 @@
             </div>
         </div>
     </div>
+
+
+    <img th:src="@{'/icons/collections.png'}" alt="gif" class="responsive" />
+    <h3><a th:href="@{http://localhost:8080/downloads/sourcecode/Project_1_JavaFXNewNew.java}">Click to download the source code</a></h3>
 </div>
+
+
+
+
 
 <script th:src="@{/vendor/jquery/jquery-1.11.3.js}"></script>
 <script th:src="@{/vendor/materialize/js/materialize.js}"></script>
