--- a/src/main/resources/templates/recursioninjava.html
+++ b/src/main/resources/templates/recursioninjava.html
@@ -69,6 +69,8 @@
             </div>
         </div>
     </div>
+
+    <h2><a th:href="@{http://localhost:8080/downloads/sourcecode/recursionexample.java}">Click to download the source code</a>--></h2>
 </div>
 
 <script th:src="@{/vendor/jquery/jquery-1.11.3.js}"></script>
