--- a/src/main/resources/static/app.css
+++ b/src/main/resources/static/app.css
@@ -299,5 +299,26 @@ nav ul li.active, nav ul li:hover {
     .chip {
         margin-left: 0.8rem;
     }
+
+    pre{
+      font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+      margin-bottom: 10px;
+      overflow: auto;
+      width: auto;
+      padding: 5px;
+      background-color: #eee;
+      width: 650px!ie7;
+      padding-bottom: 20px!ie7;
+      max-height: 600px;
+    }
+
+    .responsive {
+
+      max-width:100%;
+      max-height:100%;
+      margin:auto;
+      display:block;
+
+    }
 }
 
