--- a/src/main/resources/templates/javalists.html
+++ b/src/main/resources/templates/javalists.html
@@ -69,6 +69,8 @@
             </div>
         </div>
     </div>
+
+    <h3><a th:href="@{http://localhost:8080/downloads/sourcecode/mylinkedlist.java}">Click to download the source code</a></h3>
 </div>
 
 <script th:src="@{/vendor/jquery/jquery-1.11.3.js}"></script>
