--- a/src/main/resources/templates/javastacks.html
+++ b/src/main/resources/templates/javastacks.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
@@ -69,7 +70,12 @@
             </div>
         </div>
     </div>
+
+    <h3><a th:href="@{http://localhost:8080/downloads/sourcecode/genericstack.java}">Click to download the source code</a></h3>
 </div>
+
+
+
 
 <script th:src="@{/vendor/jquery/jquery-1.11.3.js}"></script>
 <script th:src="@{/vendor/materialize/js/materialize.js}"></script>
