--- a/src/main/resources/templates/treesinjava.html
+++ b/src/main/resources/templates/treesinjava.html
@@ -52,6 +52,8 @@
                 </a>
             </div>
         </div>
+
+        <h3><a th:href="@{http://localhost:8080/downloads/sourcecode/treesinjava.java}">Click to download the source code</a></h3>
     </div>
 
 <script th:src="@{/vendor/jquery/jquery-1.11.3.js}"></script>
