Added source code to examples

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,13 +20,13 @@
                 <a th:href="@{/}" class="brand-logo">java<span>.</span>basics</a>
                 <a href="#" data-activates="mobile-nav" class="button-collapse right"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li class="active"><a th:href="@{/}">About</a></li>
-                    <li><a th:href="@{/}">More</a></li>
+                    <li class="active"><a th:href="@{/}">Home</a></li>
+                    <!--<li class="active"><a th:href="@{/}">About (Coming Soon)</a></li>-->
 
                 </ul>
                 <ul id="mobile-nav" class="side-nav">
-                    <li class="active"><a th:href="@{/}">About</a></li>
-                    <li><a th:href="@{/}">More</a></li>
+                    <li class="active"><a th:href="@{/}">Home</a></li>
+                    <!--<li class="active"><a th:href="@{/}">About</a></li>-->
 
                 </ul>
             </div>
@@ -37,7 +37,7 @@
             <div class="col s12">
                 <form action="#" method="get">
                     <div class="input-field">
-                        <input name="q" type="search" placeholder="Search java basics..." required="required" autocomplete="off"/>
+                        <input name="q" type="search" placeholder="Search java basics...(coming soon)." required="required" autocomplete="off"/>
                         <i class="material-icons">search</i>
                     </div>
                 </form>
