--- a/src/main/resources/templates/treesinjava.html
+++ b/src/main/resources/templates/treesinjava.html
@@ -10,51 +10,82 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" th:href="@{/app.css}" />
 
-    <title>giflib</title>
+    <title>Trees</title>
 </head>
 <body>
-    <div class="navbar-fixed">
-        <nav>
-            <div class="container">
-                <a th:href="@{/}" class="brand-logo">Trees</a>
-                <a href="#" data-activates="mobile-nav" class="button-collapse right"><i class="material-icons">menu</i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a th:href="@{/}">Explore</a></li>
-                    <li><a th:href="@{/categories}">Categories</a></li>
-                    <li class="active"><a th:href="@{/favorites}">Favorites</a></li>
-                </ul>
-                <ul id="mobile-nav" class="side-nav">
-                    <li><a th:href="@{/}">Explore</a></li>
-                    <li><a th:href="@{/categories}">Categories</a></li>
-                    <li class="active"><a th:href="@{/favorites}">Favorites</a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <div class="search-bar container">
-        <div class="row">
-            <div class="col s12">
-                <form action="#" method="get">
-                    <div class="input-field">
-                        <input name="q" type="search" placeholder="Search Java Basics..." required="required" autocomplete="off"/>
-                        <i class="material-icons">search</i>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="gifs container">
-        <div class="row">
-            <div th:each="gif : ${gifs}" class="col s12 l4">
-                <a th:href="@{|/gif/${gif.name}|}">
-                    <img th:src="@{|/gifs/${gif.name}.gif|}" />
-                    <a href="#" th:class="(${gif.favorite}? 'un' : '') + 'mark favorite'"></a>
-                </a>
-            </div>
-        </div>
+<div class="navbar-fixed">
+    <nav>
+        <div class="navbar-fixed">
+            <nav>
+                <div class="container">
+                    <a th:href="@{/}" class="brand-logo">Trees</a>
+                    <a href="#" data-activates="mobile-nav" class="button-collapse right"><i class="material-icons">menu</i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li class="active"><a th:href="@{/}">Home</a></li>
+                        <!--<li class="active"><a th:href="@{/}">About (Coming soon)</a></li>-->
 
-        <h3><a th:href="@{http://localhost:8080/downloads/sourcecode/treesinjava.java}">Click to download the source code</a></h3>
+                    </ul>
+                    <ul id="mobile-nav" class="side-nav">
+                        <li class="active"><a th:href="@{/}">Home</a></li>
+                        <!--<li class="active"><a th:href="@{/}">About (Coming soon)</a></li>-->
+
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </nav>
+</div>
+<div class="search-bar container">
+    <div class="row">
+        <div class="col s12">
+            <form action="#" method="get">
+                <div class="input-field">
+                    <input name="q" type="search" placeholder="`Search java basics...(coming soon)." required="required" autocomplete="off"/>
+                    <i class="material-icons">search</i>
+                </div>
+            </form>
+        </div>
     </div>
+</div>
+<div class="categories container">
+    <div class="row">
+        <!--
+            Repeat the div element for each object in the 'categories'
+            collection of the model map. Each object in the loop
+            should be named 'category'
+        -->
+        <div th:each="category : ${categories}" class="col s12 l4">
+            <div class="card">
+                <div class="card-content">
+                    <div class="card-title">
+                        <!--
+                            Set the href attribute of the a tag to be the URI to
+                            a specific category according to the category's id.
+                            For example, /category/1 or /category/2
+
+                            Then, set the text between the a tags to be the category name,
+                            coming from the 'name' field of the 'category' object
+                            in the model map
+                        -->
+                        <a th:href="@{'/category/' + ${category.id}}" th:text="${category.name}">Category Name</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h4>Binary Tree Example</h4>
+        <h6>Author: Joshua Small</h6>
+        <!--<img th:src="@{'/icons/collections.png'}" alt="gif" class="responsive" />-->
+        <script src="https://gist.github.com/joshuaLoren/201fa493a528cf89179e982c65cad773.js"></script>
+        <h4><a th:href="@{http://localhost:8080/downloads/sourcecode/binarytree.java}">Click to download the source code</a></h4>
+    </div>
+
+
+
+</div>
+
+
+
+
 
 <script th:src="@{/vendor/jquery/jquery-1.11.3.js}"></script>
 <script th:src="@{/vendor/materialize/js/materialize.js}"></script>
