let users know that download link is coming soon

--- a/src/main/resources/templates/javacollections.html
+++ b/src/main/resources/templates/javacollections.html
@@ -76,7 +76,7 @@
         <h6>Author: Joshua Small</h6>
         <!--<img th:src="@{'/icons/collections.png'}" alt="gif" class="responsive" />-->
         <script src="https://gist.github.com/joshuaLoren/c1ac9b7d636d38a55e6d25ba01f26929.js"></script>
-        <h4><a th:href="@{http://localhost:8080/downloads/sourcecode/Project_1_JavaFXNewNew.java}">Click to download the source code</a></h4>
+        <h4><a th:href="@{http://localhost:8080/downloads/sourcecode/Project_1_JavaFXNewNew.java}">Click to download the source code...coming soon!</a></h4>
     </div>
 
 
