--- a/src/main/resources/templates/javalists.html
+++ b/src/main/resources/templates/javalists.html
@@ -76,7 +76,7 @@
         <h6>Author: Joshua Small</h6>
         <!--<img th:src="@{'/icons/collections.png'}" alt="gif" class="responsive" />-->
         <script src="https://gist.github.com/joshuaLoren/ea847f9573500e4434f618b1fa7fcdeb.js"></script>
-        <h4><a th:href="@{http://localhost:8080/downloads/sourcecode/mylinkedlist.java}">Click to download the source code</a></h4>
+        <h4><a th:href="@{http://localhost:8080/downloads/sourcecode/mylinkedlist.java}">Click to download the source code...coming soon!</a></h4>
     </div>
 
 
