--- a/src/main/resources/templates/javastacks.html
+++ b/src/main/resources/templates/javastacks.html
@@ -76,7 +76,7 @@
         <h6>Author: Joshua Small</h6>
         <!--<img th:src="@{'/icons/collections.png'}" alt="gif" class="responsive" />-->
         <script src="https://gist.github.com/joshuaLoren/03cd1fe51e6e3f615b88d485fe8aa770.js"></script>
-        <h4><a th:href="@{http://javabasics.herokuapp.com/downloads/sourcecode/genericstack.java}">Click to download the source code</a></h4>
+        <h4><a th:href="@{http://javabasics.herokuapp.com/downloads/sourcecode/genericstack.java}">Click to download the source code...coming soon!</a></h4>
     </div>
 
 
