--- a/src/main/resources/templates/javaqueues.html
+++ b/src/main/resources/templates/javaqueues.html
@@ -76,7 +76,7 @@
         <h6>Author: Joshua Small</h6>
         <!--<img th:src="@{'/icons/collections.png'}" alt="gif" class="responsive" />-->
         <script src="https://gist.github.com/joshuaLoren/1486b94b66ecdf85c36ae9cc38d40d68.js"></script>
-        <h4><a th:href="@{http://localhost:8080/downloads/sourcecode/queuedemo.java}">Click to download the source code</a></h4>
+        <h4><a th:href="@{http://localhost:8080/downloads/sourcecode/queuedemo.java}">Click to download the source code: coming soon!</a></h4>
     </div>
 
 
