--- a/src/main/resources/templates/recursioninjava.html
+++ b/src/main/resources/templates/recursioninjava.html
@@ -76,7 +76,7 @@
         <h6>Author: Joshua Small</h6>
         <!--<img th:src="@{'/icons/collections.png'}" alt="gif" class="responsive" />-->
         <script src="https://gist.github.com/joshuaLoren/52820b86af4710f6cc3e57ebf1ff7eb5.js"></script>
-        <h4><a th:href="@{http://localhost:8080/downloads/sourcecode/recursionexample.java}">Click to download the source code</a></h4>
+        <h4><a th:href="@{http://localhost:8080/downloads/sourcecode/recursionexample.java}">Click to download the source code...coming soon!</a></h4>
     </div>
 
 
