--- a/src/main/resources/templates/treesinjava.html
+++ b/src/main/resources/templates/treesinjava.html
@@ -76,7 +76,7 @@
         <h6>Author: Joshua Small</h6>
         <!--<img th:src="@{'/icons/collections.png'}" alt="gif" class="responsive" />-->
         <script src="https://gist.github.com/joshuaLoren/201fa493a528cf89179e982c65cad773.js"></script>
-        <h4><a th:href="@{http://localhost:8080/downloads/sourcecode/binarytree.java}">Click to download the source code</a></h4>
+        <h4><a th:href="@{http://localhost:8080/downloads/sourcecode/binarytree.java}">Click to download the source code...coming soon!</a></h4>
     </div>
 
 
